--- a/backend/templates/pages/home.html
+++ b/backend/templates/pages/home.html
@@ -68,6 +68,7 @@
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->	  
 
 	  <div class="col-xs-12 col-sm-4">
+	    <a href="">
 	    <article>
 	      <div class="thumbnail"
 		   style="background-image:
@@ -79,6 +80,7 @@
 		<p>Overcome writer’s block, write fiction daily, have fun, and rapidly improve your skills.</p>
 	      </div>
 	    </article>
+	    </a>
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->	  
 
 	</div> <!-- End .row .edit -->
