--- a/backend/templates/pages/home.html
+++ b/backend/templates/pages/home.html
@@ -68,7 +68,7 @@
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->	  
 
 	  <div class="col-xs-12 col-sm-4">
-	    <a href="">
+	    <a href="/post/story-structure-fundamentals">
 	    <article>
 	      <div class="thumbnail"
 		   style="background-image:
