--- a/backend/templates/elements/subheader.html
+++ b/backend/templates/elements/subheader.html
@@ -5,7 +5,7 @@
 	<div class="left">
 	  <img class="avatar left hidden"
 	       src="/media/images/profiles/avatars/signature-256x256.png"/>
-	  <a class="username" href="/@{{profile.username}}"><h1>rayalez</h1></a>
+	  <a class="username" href="/@{{profile.username}}"><h1>{{profile.username}}</h1></a>
 	  <div class="stats">
 	    <span data-toggle="tooltip" data-placement="top" title="Subscribers">
 	      <i class="fi-torsos-all"></i> {{profile.subscribers.count}}
