--- a/backend/templates/pages/home.html
+++ b/backend/templates/pages/home.html
@@ -40,17 +40,19 @@
       <div class="container">
 	<div class="row">
 	  <div class="col-xs-12 col-sm-4">
-	    <article>
-	      <div class="thumbnail"
-		   style="background-image:
-			  url('/media/images/pages/stories/metropolitan-man.jpg');"
-		   >
-	      </div>
-	      <div class="description">
-		<h1>The Metropolitan Man</h1>
-		<p>Superman has arrived. Lex Luthor, the protagonist, is coming to grips with the arrival of an alien god.</p>
-	      </div>
-	    </article>
+	    <a href="/post/metropolitan-man">
+	      <article>
+		<div class="thumbnail"
+		     style="background-image:
+			    url('/media/images/pages/stories/metropolitan-man.jpg');"
+		     >
+		</div>
+		<div class="description">
+		  <h1>The Metropolitan Man</h1>
+		  <p>Superman has arrived. Lex Luthor, the protagonist, is coming to grips with the arrival of an alien god.</p>
+		</div>
+	      </article>
+	    </a>
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->
 
 	  <div class="col-xs-12 col-sm-4">
