--- a/backend/static_serve/styles/sass/_posts.scss
+++ b/backend/static_serve/styles/sass/_posts.scss
@@ -79,8 +79,8 @@ article {
 	}
 	.upvoted {
 	    background: $orange;
+	    border: 1px solid $orange;
 	    color: white;
-	    border: none;
 	}	    
 
 	.actions {
