--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -24,13 +24,10 @@
   {% endblock %}
 
   <!-- Footer -->
-  <footer class="hidden">
+  <footer>
     <hr/>
     <div class="right">
       Made by <a href="http://rayalez.com">Ray Alez</a>
-      <a href="https://github.com/raymestalez/nexy">
-	<i class="fa fa-github"></i>
-      </a>
     </div>
   </footer>
   
@@ -49,4 +46,5 @@
   <!-- <script src="{% static "/js/comments.js" %}"></script>     -->
   <script src="{% static "/js/dist/fictionhub.js" %}" async></script>
 </body>
+
 </html>
