--- a/backend/templates/comments/comments.html
+++ b/backend/templates/comments/comments.html
@@ -34,7 +34,8 @@
   </div>
   <!-- Comment footer -->
   <div class="footer">
-    <span class="username bold">@{{comment.author.username}}</span>
+    <a class="username bold"
+       href="@{{comment.author.username}}">@{{comment.author.username}}</a>
     <!-- Reply -->
     {% if user.is_authenticated %}      
     <a class="show-reply">reply</a>
