--- a/backend/templates/posts/post-detail.html
+++ b/backend/templates/posts/post-detail.html
@@ -9,6 +9,8 @@
       <br/>
       {% include "elements/subscription-box.html" %}
       <br/>
+      {% include "elements/story-suggestions.html" %}
+      <br/>
       {% include "comments/comments.html" %}        
     </div>
   </div>
