--- a/backend/templates/pages/home.html
+++ b/backend/templates/pages/home.html
@@ -40,7 +40,7 @@
       <div class="container">
 	<div class="row">
 	  <div class="col-xs-12 col-sm-4">
-	    <a href="/post/metropolitan-man">
+	    <a href="/post/the-metropolitan-man">
 	      <article>
 		<div class="thumbnail"
 		     style="background-image:
@@ -56,21 +56,23 @@
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->
 
 	  <div class="col-xs-12 col-sm-4">
-	    <article>
-	      <div class="thumbnail"
-		   style="background-image:
-			  url('/media/images/pages/stories/boxed-in.png');"
-		   >
-	      </div>
-	      <div class="description">
-		<h1>Boxed In</h1>
-		<p>Man had created god, and put her in a box.</p>
-	      </div>
-	    </article>
+	    <a href="/post/boxed-in">
+	      <article>
+		<div class="thumbnail"
+		     style="background-image:
+			    url('/media/images/pages/stories/boxed-in.png');"
+		     >
+		</div>
+		<div class="description">
+		  <h1>Boxed In</h1>
+		  <p>Man had created god, and put her in a box.</p>
+		</div>
+	      </article>
+	    </a>
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->	  
 
 	  <div class="col-xs-12 col-sm-4">
-	    <a href="/post/story-structure-fundamentals">
+	    <a href="/post/story-writing-process">
 	    <article>
 	      <div class="thumbnail"
 		   style="background-image:
@@ -79,7 +81,7 @@
 	      </div>
 	      <div class="description">
 		<h1>Story Writing process</h1>
-		<p>Overcome writer’s block, write fiction daily, have fun, and rapidly improve your skills.</p>
+		<p>Overcome writer’s block, have fun writing fiction daily, and rapidly improve your skills.</p>
 	      </div>
 	    </article>
 	    </a>
@@ -90,46 +92,52 @@
 
 	<div class="row">
 	  <div class="col-xs-12 col-sm-4">
-	    <article>
-	      <div class="thumbnail"
-		   style="background-image:
-			  url('/media/images/pages/stories/siri.jpg');"
-		   >
-	      </div>
-	      <div class="description">
-		<h1>Siri</h1>
-		<p>A company is releasing an update that adds true AI companions to its mobile devices.</p>
-	      </div>
-	    </article>
+	      <a href="/post/siri">
+		<article>
+		  <div class="thumbnail"
+		       style="background-image:
+			      url('/media/images/pages/stories/siri.jpg');"
+		       >
+		  </div>
+		  <div class="description">
+		    <h1>Siri</h1>
+		    <p>A company is releasing an update that adds true AI companions to its mobile devices.</p>
+		  </div>
+		</article>
+	      </a>	    
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->
 
 	  <div class="col-xs-12 col-sm-4">
-	    <article>
-	      <div class="thumbnail"
-		   style="background-image:
-			  url('/media/images/pages/stories/shaman.png');"
-		   >
-	      </div>
-	      <div class="description">
-		<h1>Shaman</h1>
-		<p>Stories about a Shaman with the mysterious origin.</p>
-	      </div>
-	    </article>
+	    <a href="/post/shaman">
+	      <article>
+		<div class="thumbnail"
+		     style="background-image:
+			    url('/media/images/pages/stories/shaman.png');"
+		     >
+		</div>
+		<div class="description">
+		  <h1>Shaman</h1>
+		  <p>Stories about a Shaman with the mysterious origin.</p>
+		</div>
+	      </article>
+	    </a>
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->	  
 
 	  <div class="col-xs-12 col-sm-4">
-	    <article>
-	      <div class="thumbnail"
-		   style="background-image:
-			  url('/media/images/pages/stories/unaware.jpg');"
-		   >
-	      </div>
-	      <div class="description">
-		<h1>Unaware</h1>
-		<p>The apocalypse has continued for years now, but you’ve never noticed.
-		</p>
-	      </div>
-	    </article>
+	    <a href="/post/unaware">
+	      <article>
+		<div class="thumbnail"
+		     style="background-image:
+			    url('/media/images/pages/stories/unaware.jpg');"
+		     >
+		</div>
+		<div class="description">
+		  <h1>Unaware</h1>
+		  <p>The apocalypse has continued for years now, but you’ve never noticed.
+		  </p>
+		</div>
+	      </article>
+	    </a>
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->	  
 	</div> <!-- End .row .edit -->
 	<br/>
