--- a/backend/templates/elements/story-suggestions.html
+++ b/backend/templates/elements/story-suggestions.html
@@ -1,24 +1,25 @@
 {% load static %}
 <div class="story-suggestions">
-    <div class="row">
-      <div class="col-xs-12 col-sm-4">
-	<a href="/post/metropolitan-man">
-	  <article class="story-box">
-	    <div class="thumbnail"
-		 style="background-image:
-			url('/media/images/pages/stories/metropolitan-man.jpg');"
-		 >
-	    </div>
-	    <div class="description">
-	      <h1>The Metropolitan Man</h1>
-	      <p>Superman has arrived. Lex Luthor, the protagonist, is coming to grips with the arrival of an alien god.</p>
-	    </div>
-	  </article>
-	</a>
-      </div>   <!-- End .col-xs-12 col-sm-4 -->
+  <div class="row">
+    <div class="col-xs-12 col-sm-4">
+      <a href="/post/the-metropolitan-man">
+	<article>
+	  <div class="thumbnail"
+	       style="background-image:
+		      url('/media/images/pages/stories/metropolitan-man.jpg');"
+	       >
+	  </div>
+	  <div class="description">
+	    <h1>The Metropolitan Man</h1>
+	    <p>Superman has arrived. Lex Luthor, the protagonist, is coming to grips with the arrival of an alien god.</p>
+	  </div>
+	</article>
+      </a>
+    </div>   <!-- End .col-xs-12 col-sm-4 -->
 
-      <div class="col-xs-12 col-sm-4">
-	<article class="story-box">
+    <div class="col-xs-12 col-sm-4">
+      <a href="/post/boxed-in">
+	<article>
 	  <div class="thumbnail"
 	       style="background-image:
 		      url('/media/images/pages/stories/boxed-in.png');"
@@ -29,22 +30,23 @@
 	    <p>Man had created god, and put her in a box.</p>
 	  </div>
 	</article>
-      </div>   <!-- End .col-xs-12 col-sm-4 -->	  
+      </a>
+    </div>   <!-- End .col-xs-12 col-sm-4 -->	  
 
-      <div class="col-xs-12 col-sm-4">
-	<a href="/post/story-structure-fundamentals">
-	  <article class="story-box">
-	    <div class="thumbnail"
-		 style="background-image:
-			url('/media/images/pages/stories/story-process.png');"
-		 >
-	    </div>
-	    <div class="description">
-	      <h1>Story Writing process</h1>
-	      <p>Overcome writer’s block, write fiction daily, have fun, and rapidly improve your skills.</p>
-	    </div>
-	  </article>
-	</a>
-      </div>   <!-- End .col-xs-12 col-sm-4 -->	  
-    </div> <!-- End .row -->
+    <div class="col-xs-12 col-sm-4">
+      <a href="/post/story-writing-process">
+	<article>
+	  <div class="thumbnail"
+	       style="background-image:
+		      url('/media/images/pages/stories/story-process.png');"
+	       >
+	  </div>
+	  <div class="description">
+	    <h1>Story Writing process</h1>
+	    <p>Overcome writer’s block, have fun writing fiction daily, and rapidly improve your skills.</p>
+	  </div>
+	</article>
+      </a>
+    </div>   <!-- End .col-xs-12 col-sm-4 -->	  
+  </div> <!-- End .row .edit -->
 </div> <!-- End .story-suggestions -->
