--- a/backend/templates/elements/story-suggestions.html
+++ b/backend/templates/elements/story-suggestions.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4">
       <a href="/post/the-metropolitan-man">
-	<article>
+	<article class="story-box">
 	  <div class="thumbnail"
 	       style="background-image:
 		      url('/media/images/pages/stories/metropolitan-man.jpg');"
@@ -19,7 +19,7 @@
 
     <div class="col-xs-12 col-sm-4">
       <a href="/post/boxed-in">
-	<article>
+	<article class="story-box">
 	  <div class="thumbnail"
 	       style="background-image:
 		      url('/media/images/pages/stories/boxed-in.png');"
@@ -35,7 +35,7 @@
 
     <div class="col-xs-12 col-sm-4">
       <a href="/post/story-writing-process">
-	<article>
+	<article class="story-box">
 	  <div class="thumbnail"
 	       style="background-image:
 		      url('/media/images/pages/stories/story-process.png');"
