--- a/backend/templates/pages/home.html
+++ b/backend/templates/pages/home.html
@@ -26,11 +26,10 @@
       <div class="container">
 	<div class="row">
 	  <div class="col-xs-12">
-	    <a href="">Short Stories</a>
-	    <a href="">Science Fiction</a>
-	    <a href="">Fantasy</a>
-	    <a href="">Comedy</a>
-	    <a href="">On Writing</a>	    	    	    	    
+	    <a href="/SciFi">SciFi</a>
+	    <a href="/fantasy">Fantasy</a>
+	    <a href="/comedy">Comedy</a>
+	    <a href="/on-writing">On Writing</a>	    	    	    	    
 	  </div>   <!-- End .col-xs-12 -->
 	</div> <!-- End .row .edit -->
       </div> <!-- End .container -->
@@ -86,9 +85,7 @@
 	    </article>
 	    </a>
 	  </div>   <!-- End .col-xs-12 col-sm-4 -->	  
-
 	</div> <!-- End .row .edit -->
-
 
 	<div class="row">
 	  <div class="col-xs-12 col-sm-4">
