--- a/backend/templates/pages/home.html
+++ b/backend/templates/pages/home.html
@@ -26,7 +26,7 @@
       <div class="container">
 	<div class="row">
 	  <div class="col-xs-12">
-	    <a href="/SciFi">SciFi</a>
+	    <a href="/scifi">SciFi</a>
 	    <a href="/fantasy">Fantasy</a>
 	    <a href="/comedy">Comedy</a>
 	    <a href="/on-writing">On Writing</a>	    	    	    	    
