--- a/backend/templates/elements/meta.html
+++ b/backend/templates/elements/meta.html
@@ -1,20 +1,21 @@
   <!-- Meta -->
   <meta name="description"
-	content="Best web development tutorials and learning resources.">
-  <meta name="keywords" content="Web Development, WebDev, Tutorials, Articles, Books, Courses,Django,React,HTML,CSS,JavaScript, Programming, Python, React Courses, React Tutorials">
+	content="The best place to publish and discover awesome fiction.">
+  <meta name="keywords" content="Fiction, SciFi, Fantasy, Writing, Reading, Stories.">
   <meta name="author" content="Ray Alez">  
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
   <link rel="shortcut icon" href="http://fictionhub.io/static/img/favicon.ico"/>
   <!-- Facebook -->
-  <meta property="og:description" content="Best web development tutorials and learning resources.">
+  <meta property="og:description" content="The best place to publish and discover awesome fiction.">
   <meta property="og:url" content="http://fictionhub.io{{request.path}}">
   <meta property="og:image" content="http://fictionhub.io/static/img/social.png">
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="http://fictionhub.io{{request.path}}" />
-  <meta property="twitter:title" content="Web Academy" />
-  <meta property="twitter:description" content="Best web development tutorials and learning resources." />
+  <meta property="twitter:title" content="Fiction Hub" />
+  <meta property="twitter:description" content="The best place to publish and discover awesome fiction." />
   <meta property="twitter:creator" content="@raymestalez" />
+  <meta property="twitter:site" content="@fictionhub" />  
   <meta property="twitter:image" content="http://fictionhub.io/static/img/social.png" />  
 
