--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -4,7 +4,7 @@
  
 <head>
   <meta charset="utf-8">
-  <title>fictionhub</title>
+  <title>Fiction Hub</title>
 
   {% include "elements/meta.html" %}  
 
