--- a/backend/templates/elements/meta.html
+++ b/backend/templates/elements/meta.html
@@ -5,17 +5,17 @@
   <meta name="author" content="Ray Alez">  
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
-  <link rel="shortcut icon" href="http://fictionhub.io/static/img/favicon.ico"/>
+  <link rel="shortcut icon" href="https://fictionhub.io/static/img/favicon.ico"/>
   <!-- Facebook -->
   <meta property="og:description" content="The best place to publish, discover, and discuss awesome fiction.">
-  <meta property="og:url" content="http://fictionhub.io{{request.path}}">
-  <meta property="og:image" content="http://fictionhub.io/static/img/social.png">
+  <meta property="og:url" content="https://fictionhub.io{{request.path}}">
+  <meta property="og:image" content="https://fictionhub.io/static/img/social.png">
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="http://fictionhub.io{{request.path}}" />
+  <meta property="twitter:url" content="https://fictionhub.io{{request.path}}" />
   <meta property="twitter:title" content="Fiction Hub" />
   <meta property="twitter:description" content="The best place to publish, discover, and discuss awesome fiction." />
   <meta property="twitter:creator" content="@raymestalez" />
   <meta property="twitter:site" content="@fictionhub" />  
-  <meta property="twitter:image" content="http://fictionhub.io/static/img/social.png" />  
+  <meta property="twitter:image" content="https://fictionhub.io/static/img/social.png" />  
 
