--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -37,13 +37,7 @@
   {% include "elements/submit.html" %}
   {% include "elements/login.html" %}    
 
-
-  <!--  -->
-  <!-- <script src="{% static "/js/jquery.query-object.js" %}"></script> -->
-  <!-- My JS -->
-  <!-- <script src="{% static "/js/scripts.js" %}"></script> -->
-  <!-- <script src="{% static "/js/voting.js" %}"></script> -->
-  <!-- <script src="{% static "/js/comments.js" %}"></script>     -->
+  <!-- Scripts bundle -->
   <script src="{% static "/js/dist/fictionhub.js" %}" async></script>
 </body>
 
