--- a/backend/templates/posts/edit.html
+++ b/backend/templates/posts/edit.html
@@ -62,9 +62,10 @@
 	  </div>
 
 
-	  <!-- Editor -->
-	  {{form.body}}
-	  
+	  <!-- Editor Body -->
+	  <textarea class="form-control editor" name="body"
+		    placeholder="Write here..." ></textarea>	  
+
 	  <!-- Category -->
           <div class="col-xs-12 col-sm-3">
 	    <select name="post_category" class="form-control">
@@ -150,9 +151,6 @@
     </div> <!-- End .modal-content -->
   </div> <!-- End .modal-dialog -->
 </div>	 <!-- End .modal -->
-
-
-
 
 
 {% endblock %}
