--- a/backend/static/styles/sass/_general.scss
+++ b/backend/static/styles/sass/_general.scss
@@ -1,7 +1,8 @@
 html, body {
     font-family: "Open Sans", sans-serif;
-    background: $background;
-    /* background: #f6f3ea; */
+    /* background: $background; */
+    background: #f6f3ea;
+
     color: $black;
 }
 
