--- a/backend/static_serve/styles/sass/_header.scss
+++ b/backend/static_serve/styles/sass/_header.scss
@@ -129,7 +129,9 @@ header {
 
 /* Subnav */
 .subnav {
-    background-color: rgba(255, 255, 255, 0.33);
+    /* background-color: rgba(255, 255, 255, 0.33); */
+    /* background-color: #fbfbfb; */
+    background-color: rgba(251, 251, 251, 0.9);
     box-shadow: 0 1px 0 0 rgba(0,0,0,.05), 0 2px 4px 0 rgba(0,0,0,.06);
     .filters {
 	@media  (max-width: 420px) {
