--- a/backend/static_serve/styles/sass/_general.scss
+++ b/backend/static_serve/styles/sass/_general.scss
@@ -3,9 +3,9 @@ html, body {
     /* background: $background; */
     /* background: #f6f3ea; */
     /* background: #fdf5e7 url("/static/img/bg.png");     */
-    /* background: #faf4e9; */ /* more staturated */
     /* background: #faf7f1; */ /* bright */
-    background: #faf6ef; /* mid */
+    /* background: #faf6ef;  *//* mid */
+    background: #faf4e9; /* more staturated */
     color: $black;
 }
 
