--- a/backend/static/styles/sass/style.scss
+++ b/backend/static/styles/sass/style.scss
@@ -11,6 +11,7 @@ $black-lighter: #3d454b;
 $gray: #999;
 $dark-gray: rgba(0,0,0,.6);
 $light-gray: #e7e7e7;
+$black-bluish: #3d454b;
 
 @import 'helpers';
 @import 'general';
