--- a/backend/templates/comments/comments.html
+++ b/backend/templates/comments/comments.html
@@ -35,7 +35,7 @@
   <!-- Comment footer -->
   <div class="footer">
     <a class="username bold"
-       href="@{{comment.author.username}}">@{{comment.author.username}}</a>
+       href="/@{{comment.author.username}}">@{{comment.author.username}}</a>
     <!-- Reply -->
     {% if user.is_authenticated %}      
     <a class="show-reply">reply</a>
