--- a/backend/static_serve/styles/sass/_general.scss
+++ b/backend/static_serve/styles/sass/_general.scss
@@ -11,15 +11,18 @@ html, body {
 
 /* Typography */
 article h1, h1 a {
-    font-size: 36px;
+    /* font-size: 36px; */
+    font-size: 32px;    
     font-weight: bold;
     border-bottom: 1px solid #dddddd;
     line-height: 50px;
     margin-top: 0;
+    color: $black-bluish;
 }
 article h2, h2 a {
     font-size: 30px;
-    font-weight: bold;	
+    font-weight: bold;
+    color: $black-bluish;
 }
 h3 {
     font-size: 24px;
