--- a/backend/templates/posts/post-detail.html
+++ b/backend/templates/posts/post-detail.html
@@ -27,6 +27,7 @@
   <meta property="twitter:image" content="https://fictionhub.io/static/img/social.png" />  
 {% endblock %}
 {% block content %}
+{# {% include "elements/subheader.html" %} #}
 <div class="container">
   <div class="row">
     <div class="col-md-12 col-sm-12 post-detail">
