--- a/backend/static_serve/styles/sass/_general.scss
+++ b/backend/static_serve/styles/sass/_general.scss
@@ -9,6 +9,10 @@ html, body {
     color: $black;
 }
 
+.page {
+    min-height: calc(100vh - 140px);
+}
+
 /* Typography */
 article h1, h1 a {
     /* font-size: 36px; */
