--- a/backend/static_serve/styles/sass/style.scss
+++ b/backend/static_serve/styles/sass/style.scss
@@ -111,7 +111,7 @@ $black-bluish: #3d454b;
 /* Footer */
 
 footer {
-    min-height: 40px;
+    height: 40px;    
     background-color: #333a42;
     color: #babfc2;    
     a {
