--- a/backend/templates/profiles/settings.html
+++ b/backend/templates/profiles/settings.html
@@ -30,6 +30,13 @@
 		 value="{{user.about}}">
 	  <br/>
 
+	  <!-- Website -->
+          <input class="form-control" name="website"
+		 type="text" maxlength="254"
+		 placeholder="Website"
+		 value="{{user.website}}">
+	  <br/>
+	  
 	  <!-- Submit -->
 	  <button type="submit"
 		  class="btn btn-primary right">
